--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 <body>
     <!-- Hero Section -->
     <section class="hero-section">
-        <div class="hero-photo"><img src="your-photo.jpg" alt="Sumithra Manikandan" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;"> </div>
+        <div class="hero-photo"><img src="sumithra/sumi.png" alt="Sumithra Manikandan" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;"> </div>
         <div class="hero-name">Sumithra Manikandan</div>
     </section>
 
@@ -533,10 +533,10 @@
                     <div class="card-background" style="background-image: url('https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=800&q=80');"></div>
                     <div class="card-overlay"></div>
                     <div class="card-content">
-                        <h3 class="card-title">TAM · SAM · SOM + Golden Circle</h3>
+                        <h3 class="card-title">TAM · SAM · SOM </h3>
                         <p class="card-subtitle">Marketing Strategy</p>
                         <p class="card-description">Market sizing and purpose-led positioning.</p>
-                        <a href="#" class="card-link">View Presentation</a>
+                        <a href="https://workdrive.zohopublic.in/writer/open/095h546bc357b65594124a0a9145d8e5ddd83" class="card-link">View Presentation</a>
                     </div>
                 </div>
 
