--- a/index.html
+++ b/index.html
@@ -544,10 +544,10 @@
                     <div class="card-background" style="background-image: url('https://images.unsplash.com/photo-1557804506-669a67965ba0?w=800&q=80');"></div>
                     <div class="card-overlay"></div>
                     <div class="card-content">
-                        <h3 class="card-title">Product Pitch Deck & BMC</h3>
+                        <h3 class="card-title">BMC</h3>
                         <p class="card-subtitle">Product Management</p>
                         <p class="card-description">Problem-solution fit and business viability.</p>
-                        <a href="#" class="card-link">View Deck</a>
+                        <a href="https://workdrive.zohopublic.in/writer/open/rgnwx36b5490d0c2d423d8904add41ec16689" class="card-link">View Deck</a>
                     </div>
                 </div>
 
@@ -580,7 +580,7 @@
                         <h3 class="card-title">ColourQuill – Product Ideation</h3>
                         <p class="card-subtitle">Product · Marketing</p>
                         <p class="card-description">Bird Cage challenge (Shark Tank style).</p>
-                        <a href="#" class="card-link">View Pitch</a>
+                        <a href="https://workdrive.zohopublic.in/show/open/a8gel6b096cb73bd7466e8f0270ee55c7240b" class="card-link">View Pitch</a>
                     </div>
                 </div>
 
