--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 <body>
     <!-- Hero Section -->
     <section class="hero-section">
-        <div class="hero-photo"><img src="Sumithra/Sumi.png" alt="Sumithra Manikandan" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;"> </div>
+        <div class="hero-photo"><img src="images/Sumi.png" alt="Sumithra Manikandan" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;"> </div>
         <div class="hero-name">Sumithra Manikandan</div>
     </section>
 
@@ -547,7 +547,7 @@
                         <h3 class="card-title">BMC</h3>
                         <p class="card-subtitle">Product Management</p>
                         <p class="card-description">Problem-solution fit and business viability.</p>
-                        <a href="https://workdrive.zohopublic.in/writer/open/rgnwx36b5490d0c2d423d8904add41ec16689" class="card-link">View Deck</a>
+                        <a href="https://workdrive.zohopublic.in/writer/open/rgnwx36b5490d0c2d423d8904add41ec16689" class="card-link">View Document</a>
                     </div>
                 </div>
 
