--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 <body>
     <!-- Hero Section -->
     <section class="hero-section">
-        <div class="hero-photo"><img src="Sumi.png" alt="Sumithra Manikandan" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;"> </div>
+        <div class="hero-photo"><img src="https://raw.githubusercontent.com/sumithramanikandan455-ctrl/<branch>/Sumi.png" alt="Sumithra Manikandan" style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover;"> </div>
         <div class="hero-name">Sumithra Manikandan</div>
     </section>
 
