--- a/index.html
+++ b/index.html
@@ -194,23 +194,21 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             position: relative;
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         .product-card:hover {
             transform: translateY(-5px);
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
         }
         .logo-container {
-            position: absolute;
-            top: 1rem;
-            right: 1rem;
-            width: 60px;
-            height: 60px;
+            width: 80px;
+            height: 80px;
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: #f9f9f9;
-            border-radius: 8px;
-            padding: 8px;
+            margin-bottom: 1.5rem;
         }
         .logo-container img {
             width: 100%;
@@ -222,8 +220,6 @@
             font-weight: 700;
             color: #1a1a1a;
             margin-bottom: 0.75rem;
-            margin-top: 1rem;
-            padding-right: 70px;
         }
         .product-features {
             font-size: 1rem;
