--- a/index.html
+++ b/index.html
@@ -728,11 +728,11 @@
                 <div class="content-inner">
                     <div class="header-section">
                         <h2 class="newsletter-title">Newsletter Contributions</h2>
-                        <p class="newsletter-subtitle">My written contributions across team and institutional newsletters.</p>
+                        <p class="newsletter-subtitle">My written contributions in Tharuvai's monthly bulletin by Zoho Schools.</p>
                     </div>
                     <div class="article-section">
-                        <h3 class="article-title">Product Awareness Articles</h3>
-                        <p class="article-description">Explaining tools and features.</p>
+                        <h3 class="article-title">My Articles</h3>
+                        <p class="article-description">Explaining campus events, tools, and features.</p>
                         <a href="https://workdrive.zohoexternal.in/folder/6ldvi31ff7ef3807041e1a836266d5a188bc3" class="article-link">Read</a>
                     </div>
                 </div>
